# colorize

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: utils.h
source/: CMakeLists.txt  main.cpp  utils.cpp
